--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,20 +20,29 @@
   </p>
 
 
-  <p>
-    <strong>Review:</strong>
-    <% @restaurant.reviews.each do |review| %>
-    <p>  <%= review.content %> </p>
+   <div class="list-group">
+        <% @restaurant.reviews.each do |review| %>
+          <li class="list-group-item">
+            <small>
+              <% count = 0 %>
+              <% 5.times do %>
+                <% if review.rating > count %>
+                  <i class="fa-solid fa-star"></i>
+                <% else %>
+                  <i class="fa-regular fa-star"></i>
+                <% end %>
+                <% count += 1 %>
+              <% end %>
+            </small>
+            <p><%= review.content %></p>
+          </li>
+        <% end %>
+      </div>
+
+
+   <%= simple_form_for [@restaurant, @review] do |f| %>
+        <%= f.input :rating, collection: 0..5 %>
+        <%= f.input :content%>
+        <%= f.submit class: 'btn btn-primary' %>
       <% end %>
-  </p>
-
-<p>
-    <strong>Rating:</strong>
-    <%= @restaurant.ratings.each do |rating| %>
-     <p>  <%= review.content %> </p>
-     <% end %>
-  </p>
-
-  <%= link_to "See details", restaurant_path(@restaurant), class: "btn btn-primary"%>
-
-</div>
+      <%= link_to "See all restaurants", restaurants_path %>
